@@ -381,36 +381,39 @@ public class ReportParameter implements Serializable {
 		//https://stackoverflow.com/questions/9763619/does-el-support-overloaded-methods
 		Object value = getEffectiveActualParameterValue();
 
-		if (value == null) {
+		String[] passedValues = getPassedParameterValues();
+		String defaultValue = parameter.getLocalizedDefaultValue(locale);
+		Report defaultValueReport = parameter.getDefaultValueReport();
+
+		if (value == null || (passedValues == null && StringUtils.isBlank(defaultValue)
+				&& defaultValueReport == null)) {
 			return "";
 		}
 
-		ParameterDataType parameterDataType = parameter.getDataType();
-		if (parameterDataType.isDate()) {
-			return parameter.getDateString(value, locale);
-		}
+		String returnValue;
 
-		String defaultValue = parameter.getLocalizedDefaultValue(locale);
-		Report defaultValueReport = parameter.getDefaultValueReport();
-		if (StringUtils.isBlank(defaultValue) && defaultValueReport == null) {
-			return ""; //return blank instead of "0" for integers or "0.0" for doubles
+		if (value instanceof List) {
+			List<String> values = new ArrayList<>();
+			@SuppressWarnings("unchecked")
+			List<Object> valueList = (List<Object>) value;
+			for (int i = 0; i < valueList.size(); i++) {
+				String htmlValue = String.valueOf(valueList.get(i));
+				values.add(htmlValue);
+			}
+			//https://stackoverflow.com/questions/8627902/new-line-in-text-area
+			//https://stackoverflow.com/questions/7693994/how-to-convert-ascii-code-0-255-to-a-string-of-the-associated-character
+			int NEWLINE_CHAR_ASCII = 10;
+			returnValue = StringUtils.join(values, String.valueOf(Character.toChars(NEWLINE_CHAR_ASCII)));
 		} else {
-			if (value instanceof List) {
-				List<String> values = new ArrayList<>();
-				@SuppressWarnings("unchecked")
-				List<Object> valueList = (List<Object>) value;
-				for (int i = 0; i < valueList.size(); i++) {
-					String htmlValue = String.valueOf(valueList.get(i));
-					values.add(htmlValue);
-				}
-				//https://stackoverflow.com/questions/8627902/new-line-in-text-area
-				//https://stackoverflow.com/questions/7693994/how-to-convert-ascii-code-0-255-to-a-string-of-the-associated-character
-				int NEWLINE_CHAR_ASCII = 10;
-				return StringUtils.join(values, String.valueOf(Character.toChars(NEWLINE_CHAR_ASCII)));
+			ParameterDataType parameterDataType = parameter.getDataType();
+			if (parameterDataType.isDate()) {
+				returnValue = parameter.getDateString(value, locale);
 			} else {
-				return String.valueOf(value);
+				returnValue = String.valueOf(value);
 			}
 		}
+
+		return returnValue;
 	}
 
 	/**
