@@ -3,7 +3,8 @@ ART 3.2
 * Added OrgChart report types
 * Allow individual jobs to use a different smtp server
 * Fix for jpivot reports not working
-* Save settings in the art database
+* Save settings in the art database. Settings will need to be re-entered.
+* Fix for job parameter value being blank on edit
 * Updated mariadb driver
 
 ART 3.1
